# AoC-2022

./: .gitignore  Cargo.toml
day_01/src/: example.rs  main.rs
day_03/src/: main.rs
day_03_p_2/: Cargo.toml
day_03_p_2/src/: main.rs
day_06/src/: main.rs
day_07/: Cargo.toml
day_08/: Cargo.toml
day_08/src/: main.rs
day_09/: Cargo.toml
day_09/src/: main.rs
day_10/src/: main.rs
day_2/src/: main.rs
day_3/src/: main.rs
day_4/src/: main.rs
day_5/src/: main.rs
day_7/: Cargo.toml
day_8/: Cargo.toml
day_9/: Cargo.toml
